# phoenix-seat-manager-v1

./: Cargo.toml
sdk/idl/: phoenix_seat_manager.json
src/: instruction.rs  instruction_builders.rs  lib.rs
src/processor/: authorized_evictor.rs  evict_seat.rs  mod.rs
tests/: test_add_remove_mm.rs  test_change_market_fee_recipient.rs  test_change_market_status.rs  test_claim_market_authority.rs  test_claim_seat.rs  test_claim_seat_manager_authority.rs  test_confirm_renounce_seat_manager_authority.rs  test_evict_authorized_delegate.rs  test_evict_seat.rs  test_name_market_authority_successor.rs  test_name_seat_manager_successor.rs  test_seat_manager.rs
tests/setup/: helpers.rs  init.rs
