[package]
name = "phoenix-seat-manager-common"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/Ellipsis-Labs/phoenix-seat-manager-v1"
authors = ["Ellipsis Labs <maintainers@ellipsislabs.xyz>"]
description = "Automatic seat manager for the Phoenix program"
license-file = "LICENSE"

[lib]
crate-type = ["cdylib", "lib"]
name = "phoenix_seat_manager"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test = []

[profile.release]
lto = "fat"
codegen-units = 1
overflow-checks = true

[dependencies]
borsh = "0.9.3"
bytemuck = "1.13.0"
ellipsis-macros = "0.1.1" 
itertools = "0.10.5"
lib-sokoban = ">=0.3.2" 
num_enum = "0.5.9"
phoenix-common = { version = "0.2.1", features = [ "no-entrypoint" ] }
proc-macro-crate = "1.3.0"
shank = "0.4.2"
solana-program = "1.16.3"
solana-security-txt = ">=1.1.0"
spl-associated-token-account = { version = "2.2.0", features = [ "no-entrypoint" ] } 
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
static_assertions = "1.1.0"
thiserror = "1.0.38"
toml_edit = "0.18.1"

[dev-dependencies]
rand = "0.7.3"
tokio = { version="*", features=["full"]}
solana-sdk = "1.16.3"
solana-program-test = "1.16.3"
ellipsis-client = "1.0.0"
phoenix-sdk = "0.7.0"