[package]
name = "phoenix-seat-manager-common"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/Ellipsis-Labs/phoenix-seat-manager-v1"
authors = ["Ellipsis Labs <maintainers@ellipsislabs.xyz>"]
description = "Automatic seat manager for the Phoenix program"
license-file = "LICENSE"

[lib]
crate-type = ["cdylib", "lib"]
name = "phoenix_seat_manager"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test = []

[profile.release]
lto = "fat"
codegen-units = 1
overflow-checks = true

[dependencies]
phoenix-common = {git = "https://github.com/florian-klein/phoenix-v1.git", branch = "crate", features = ["no-entrypoint"]}
shank = "0.0.12"
lib-sokoban = "0.3.3" 
itertools = "0.10.5"
static_assertions = "1.1.0"
spl-token = { version = ">=3.5.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = ">=2.3.0", features = [ "no-entrypoint" ] } 
toml_edit = "0.18.1"
proc-macro-crate = "1.3.1"
solana-program = "2.0.11"
borsh = "0.10.4"
bytemuck = "1.18.0"
num_enum = "0.5.11"

[dev-dependencies]
rand = "0.7.3"
